# pixel-viewer

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  install-icon.sh  pixelview.desktop
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
assets/: pixelfx_builtin.ron
docs/ui-cleanup/: README.md
docs/ui-cleanup/screenshots/: captions.md
src/: anim.rs  app.rs  archive.rs  cache.rs  colo_thumb.rs  dls.rs  format_color.rs  image_types.rs  libxmp.rs  main.rs  palettes_builtin.rs  rating.rs  ratings.rs  sauce.rs  scale.rs  sfz.rs  sixteen.rs  soundfont.rs  thumb.rs  viewdb.rs  xi.rs
src/decode/: adf.rs  ansi.rs  aseprite.rs  audio.rs  bin.rs  builtin.rs  c64_font.rs  code.rs  cp437_font.rs  cp437_font_8x8.rs  idf.rs  mod.rs  opl3.rs  pcx.rs  pdf.rs  petmate.rs  petscii.rs  psd.rs  rad.rs  rip.rs  rip_chr.rs  svg.rs  tundra.rs  xbin.rs  xcf.rs
