[package]
name = "pixelview"
version = "0.1.0"
edition = "2021"
description = "A fast, pixel-art-first image viewer"

[dependencies]
asefile = "0.3.8"
# eframe re-exports egui, so we depend on eframe only — guarantees matching versions.
# "persistence" enables on-disk storage (eframe::{get,set}_value) to remember the UI zoom.
eframe = { version = "0.34", features = ["persistence"] }
# Only the formats we actually want; keeps the dep tree (and build time) smaller.
image = { version = "0.25", default-features = false, features = [
    "png", "gif", "bmp", "jpeg", "webp", "tga", "tiff", "pnm", "qoi", "ico",
] }
psd = "0.3.5"
resvg = "0.47.0"
# PDF metadata only (page count, MediaBox dimensions, /Info title+author) — pure Rust,
# no system deps. We render a placeholder page tile + show info; real page rasterization
# (pdfium) is a deferred, feature-gated fast-follow. default-features off keeps it lean.
lopdf = { version = "0.43", default-features = false }
# Audio DECODING + metadata only (pure Rust, no audio device — safe in headless CI). Used
# to draw a waveform thumbnail + show duration/samplerate/channels/codec. In-app *playback*
# (rodio → cpal → ALSA) is a deferred, default-off feature so `cargo test` stays device-free.
# Defaults cover wav/flac/ogg/vorbis/pcm + id3; `mp3` is opt-in.
symphonia = { version = "0.6", features = ["mp3", "aiff"] }
# Read-only extraction of legacy + modern archives (zip/lha/arj/arc/zoo/7z/rar/…),
# so archives can be browsed as virtual folders. Mike Krüger's crate (icy ecosystem).
unarc-rs = "0.6"
# Write + read `.pvkit` sample-kit files (a zip of pad WAVs + a manifest) and the pad
# "Download zip" export. Already in the tree transitively via unarc-rs (zip 8.6.x), so it's
# proven to build on stable rustc 1.92; a direct dep unifies to that same build.
zip = { version = "8.6", default-features = false, features = ["deflate"] }
# Mike Krüger's scene-art parsers (PETSCII/RIP/ATASCII/…). The lightweight parser
# crate only — no tokio/egui — driven into our own renderer via its CommandSink.
# Pinned to a rev so upstream master can't break our build.
icy_parser_core = { git = "https://github.com/mkrueger/icy_tools", rev = "68d4b4866c6b67bce0ad99d30f449bc8a8c30515" }
# Browse 16colo.rs as a virtual disk: HTTPS for the JSON API + pack-zip downloads.
ureq = "2"
serde_json = "1"
# derive Serialize/Deserialize for persisted structs (e.g. FxPreset). serde +
# serde_derive are already in the tree via eframe/serde_json; this just exposes it.
serde = { version = "1", features = ["derive"] }
# HQx pixel-art upscalers (HQ2x/3x/4x). Operates on raw &[u32] ARGB — no image-crate
# coupling — so it plugs straight into the scale module's RGBA buffers.
hqx = "0.1"
# Native open-folder / open-file dialogs on Linux, macOS, Windows.
rfd = "0.15"
trash = "5.2.6"
xcf = "0.4.0"
# View-history store. Pinned to 0.37: rusqlite 0.40 pulls libsqlite3-sys 0.38, whose
# build script uses the still-unstable `cfg_select!` and fails to compile on stable
# rustc 1.92. `bundled` builds SQLite from source — no system libsqlite dependency.
rusqlite = { version = "0.37", features = ["bundled"] }
# In-app audio preview (play/pause/seek). `playback` pulls cpal → alsa-sys, so a Linux
# BUILD needs libasound2-dev (see CLAUDE.md + CI); the device is opened lazily + fallibly at
# first Play, so a headless box (CI) builds + tests fine without an audio device. Only the
# four codecs we decode elsewhere — keeps mp4/aac/recording/noise out of the tree.
rodio = { version = "0.22", default-features = false, features = [
    "playback", "mp3", "wav", "vorbis", "flac", "symphonia-aiff",
] }
# Tracker-module playback (MOD/XM/S3M/IT), pure Rust — parses + synthesizes to samples we
# feed the same rodio sink as PCM audio. No C dependency (unlike libopenmpt).
xmrs = "0.14"
xmrsplayer = "0.14"
# Hardware MIDI-controller input for the sample keyboard. Its ALSA-seq backend links the
# same `libasound2` we already need for rodio (no new system dep); macOS uses CoreMIDI,
# Windows winmm. The callback runs on midir's own thread → we bridge note events over an
# mpsc channel that the UI polls. Read-only input; the `jack` feature is left off.
midir = "0.11"
# SoundFont (.sf2) reader — pure Rust, std-only, no system deps. Used read-only to list a
# soundfont's presets/instruments and extract each sample's PCM (as `&[i16]`) for the same
# sample explorer + WAV export as tracker modules. (It's a synthesizer crate; we use only
# its parser + `get_wave_data`.)
rustysynth = "1.3"
# In-process PDF page rendering (Google's pdfium). Loaded DYNAMICALLY at runtime via
# libloading (no build-time linking, no bindgen — uses pregenerated bindings), so the crate
# compiles on every platform even when the pdfium library is absent. The Windows build ships
# a bundled `pdfium.dll` (vendor/pdfium/win-x64, copied next to the exe by build.rs); other
# platforms fall back to poppler's `pdftoppm` then a placeholder tile. `thread_safe` guards
# the (non-reentrant) C library so the multithreaded thumbnailer can render PDFs concurrently.
pdfium-render = { version = "0.9", default-features = false, features = [
    "image_latest", "thread_safe", "pdfium_latest",
] }

# Read/write star ratings as the KDE Baloo `user.baloo.rating` extended attribute,
# so ratings interoperate with Gwenview and the user's sort-by-rating tooling. Unix-only
# (the crate has no Windows backend on 1.6+); Windows falls back to the ratings.json sidecar.
[target.'cfg(unix)'.dependencies]
xattr = "1"

[profile.release]
opt-level = 3
lto = "thin"

[build-dependencies]
# Compiles the vendored libxmp C sources (vendor/libxmp) into a static lib — used to play the
# extra tracker formats xmrs doesn't (669/far/okt/med/amf/ult/mtm/stm). Bundled (not a system
# dependency) so `cargo run` just works; libxmp is MIT and self-contained (only links libm).
cc = "1"

[dev-dependencies]
egui_kittest = { version = "0.34", features = ["eframe"] }

[features]
# Opt-in: render real GUI screenshots to target/gui-screenshots/ via
# egui_kittest's wgpu backend (needs a Vulkan driver — lavapipe in CI). Off by
# default so the normal `cargo test` stays GPU-free and doesn't compile wgpu.
# Enabled only by the CI "screenshots" job: `cargo test --features gui-screenshots`.
gui-screenshots = ["egui_kittest/wgpu", "egui_kittest/snapshot"]
